force-app/main/default/objects/pmdm__Program__c/pmdm__Program__c.object-meta.xml
<CustomObject>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>