force-app/main/default/objects/pmdm__Program__c/fields/pmdm__Description__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>