force-app/main/default/objects/pmdm__Program__c/fields/pmdm__EndDate__c.field-meta.xml
<CustomField>
    <fullName>pmdm__EndDate__c</fullName>
    <description>The date the Program is scheduled to end.</description>
    <inlineHelpText>The date the Program is scheduled to end.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>