force-app/main/default/objects/pmdm__Program__c/fields/pmdm__ProgramIssueArea__c.field-meta.xml
<CustomField>
    <fullName>pmdm__ProgramIssueArea__c</fullName>
    <description>The issue area addressed by the Program. Values are determined by your Admin.</description>
    <inlineHelpText>The issue area addressed by the Program. Values are determined by your Admin.</inlineHelpText>
    <label>Program Issue Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Food and Nutrition</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>