force-app/main/default/objects/pmdm__Program__c/fields/pmdm__TargetPopulation__c.field-meta.xml
<CustomField>
    <fullName>pmdm__TargetPopulation__c</fullName>
    <description>The population the Program is designed to assist.</description>
    <inlineHelpText>The population the Program is designed to assist.</inlineHelpText>
    <label>Target Population</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>