force-app/main/default/objects/pmdm__Program__c/listViews/pmdm__All.listView-meta.xml
<ListView>
    <fullName>pmdm__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>